--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -268,6 +268,9 @@ a.gotop {
         .i-a {
           width: 100%;
           margin-bottom: 12px;
+          &:hover{
+            opacity: .9;
+          }
         }
         .i-b {
           width: 100%;
@@ -421,6 +424,13 @@ a.gotop {
         font-weight: bold;
         @media all and (max-width: 1000px) {
           font-size: 18px;
+        }
+      }
+      .video-box {
+        padding: 20px 0;
+        iframe {
+          width: 100%;
+          height: 500px;
         }
       }
       a.a-an{
@@ -677,6 +687,26 @@ a.gotop {
       @media all and (max-width: 1000px) {
         p {
           font-size: 15px;
+        }
+        .video-box {
+          iframe {
+            height: 420px;
+          }
+        }
+      }
+      @media all and (max-width: 600px) {
+        .video-box {
+          iframe {
+            height: 315px;
+          }
+        }
+      }
+      @media all and (max-width: 450px) {
+        .video-box {
+          padding: 5px 0;
+          iframe {
+            height: 200px;
+          }
         }
       }
       ul.list {
