--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -409,6 +409,17 @@ a.gotop {
       display: block;
       padding-bottom: 15px;
     }
+    .store-event{ 
+      margin: 0 auto;
+      width: 100%;
+      max-width: 550px;
+      display: block;
+      padding-bottom: 15px;
+      @media all and (max-width: 600px) {
+        padding-top: 30px;
+        padding-bottom: 10px;
+      }
+    }
     .card {
       padding: 50px 30px 30px 30px;
       border-radius: 20px;
