--- a/iiot/taoyuang1000/collect/css/style.css
+++ b/iiot/taoyuang1000/collect/css/style.css
@@ -256,6 +256,17 @@ body {
   padding-bottom: 10px;
 }
 
+.collect-container .event-content-top img.t3 {
+  width: 80%;
+  max-width: 800px;
+  display: inline-block;
+  padding-bottom: 10px;
+}
+
+.collect-container .event-content-top img.img-mob {
+  display: none;
+}
+
 .collect-container .event-content {
   padding: 55px;
 }
@@ -328,12 +339,84 @@ body {
   position: relative;
 }
 
+.collect-container .bg-grid {
+  background: url(../images/bg_nb_bg.png) center center repeat;
+  background-size: cover;
+  padding-bottom: 35px;
+}
+
+.collect-container .nb-border {
+  width: 80%;
+  margin: 0 auto;
+  border: 2px solid #555;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.collect-container .nb-border .t-date {
+  width: 100%;
+  position: relative;
+  text-align: center;
+  background-color: #5AAEA8;
+  border-bottom: 2px solid #555;
+  padding: 15px;
+}
+
+.collect-container .nb-border .t-date img {
+  width: 80%;
+  max-width: 220px;
+}
+
+.collect-container .nb-border .t-date::after {
+  content: "";
+  top: 10px;
+  left: 10px;
+  width: 50px;
+  height: 15px;
+  position: absolute;
+  display: block;
+  background: url(../images/bg_nb_icon.png) center center no-repeat;
+  background-size: contain;
+}
+
+.collect-container .nb-border .nb-content {
+  min-height: 200px;
+  padding: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.collect-container .nb-border .nb-content div {
+  text-align: center;
+}
+
+.collect-container .nb-border .nb-content div p {
+  display: inline-block;
+  font-size: 36px;
+  font-weight: bold;
+  color: #2ea79f;
+  padding: 15px;
+}
+
 @media all and (max-width: 650px) {
   .collect-container .middle-container {
     border-radius: 10px;
   }
   .collect-container .event-content-top {
     padding: 15px;
+  }
+  .collect-container .event-content-top img.img-pc {
+    display: none;
+  }
+  .collect-container .event-content-top img.img-mob {
+    display: inline-block;
   }
   .collect-container .event-content {
     padding: 10px;
