--- a/iiot/taoyuang1000/collect/css/style.scss
+++ b/iiot/taoyuang1000/collect/css/style.scss
@@ -45,6 +45,15 @@
         display: inline-block;
         padding-bottom: 10px;
       }
+      &.t3 {
+        width: 80%;
+        max-width: 800px;
+        display: inline-block;
+        padding-bottom: 10px;
+      }
+      &.img-mob{
+        display: none;
+      }
     }
   }
   .event-content{
@@ -107,12 +116,75 @@
       position: relative;
     }
   }
+  .bg-grid{
+    background: url(../images/bg_nb_bg.png) center center repeat;
+    background-size: cover;
+    padding-bottom:35px;
+  }
+  .nb-border{
+    width: 80%;
+    margin: 0 auto;
+    border: 2px solid #555;
+    background-color: #fff;
+    border-radius: 4px;
+    .t-date{
+      width: 100%;
+      position: relative;
+      text-align: center;
+      background-color: #5AAEA8;
+      border-bottom: 2px solid #555;
+      padding: 15px;
+      img{
+        width: 80%;
+        max-width:220px;
+      }
+      &::after{
+        content: "";
+        top: 10px;
+        left: 10px;
+        width: 50px;
+        height: 15px;
+        position: absolute;
+        display: block;
+        background: url(../images/bg_nb_icon.png) center center no-repeat;
+        background-size: contain;
+      }
+    }
+    .nb-content{
+      min-height: 200px;
+      padding: 15px;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-align-items: center;
+      align-items: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      div{
+       text-align: center;
+        p{
+          display: inline-block;
+          font-size: 36px;
+          font-weight: bold;
+          color: #2ea79f;
+          padding: 15px;
+        }
+      }
+    }
+  }
   @media all and (max-width: 650px) {
     .middle-container{
       border-radius: 10px;
     }
     .event-content-top {
       padding:15px;
+      img{
+        &.img-pc{
+          display: none; 
+        }
+        &.img-mob{
+          display: inline-block;
+        }
+      }
     }
     .event-content {
       padding: 10px;
