桃憩一夏-新增點選抽獎按鈕頁

--- a/iiot/taoyuang1000/collect/css/style.css
+++ b/iiot/taoyuang1000/collect/css/style.css
@@ -238,7 +238,7 @@ body {
   padding: 30px 55px 0 55px;
   width: 100%;
   text-align: center;
-  background: url(../images/bg_main.png) center top no-repeat;
+  background: url(../images/bg_main_2.png) center top no-repeat;
   background-size: contain;
 }
 
@@ -358,9 +358,11 @@ body {
   border: 2px solid #555;
   background-color: #fff;
   border-radius: 4px;
+  position: relative;
 }
 
 .collect-container .nb-border .t-date {
+  min-height: 7.5vh;
   width: 100%;
   position: relative;
   text-align: center;
@@ -387,6 +389,7 @@ body {
 }
 
 .collect-container .nb-border .nb-content {
+  width: 100%;
   min-height: calc(52vh - 80px);
   padding: 15px;
   display: -webkit-box;
@@ -410,6 +413,42 @@ body {
   font-weight: bold;
   color: #2ea79f;
   padding: 15px;
+}
+
+.collect-container .nb-border .nb-content .btn-info {
+  width: 100%;
+  padding-left: 10%;
+}
+
+.collect-container .nb-border .nb-content .btn-info .btn-go {
+  cursor: pointer;
+  height: 30vh;
+  width: 35vh;
+  display: block;
+  background: url(../images/btn-go.png) center center no-repeat;
+  text-indent: -9999px;
+  background-size: contain;
+  margin-left: 3vh;
+}
+
+.collect-container .nb-border .nb-content .btn-info .input-nb {
+  height: 12vh;
+  width: 35vh;
+  display: block;
+  background: url(../images/btn-nb.png) center center no-repeat;
+  background-size: contain;
+  text-align: center;
+  color: #fff;
+  font-size: 6vh;
+  text-indent: 1vw;
+}
+
+.collect-container .nb-border .crane {
+  position: absolute;
+  width: 54vh;
+  height: 54vh;
+  right: -2vw;
+  bottom: -8vh;
 }
 
 @media all and (max-width: 650px) {
