--- a/iiot/taoyuang1000/collect/css/style.scss
+++ b/iiot/taoyuang1000/collect/css/style.scss
@@ -72,6 +72,7 @@
     .nb-content{
       width: 100%;
       padding: 15px 0 30px 0;
+      position: relative;
       li{
          width: 33%;
          float: left;
@@ -134,6 +135,28 @@
     background-color: #fff;
     border-radius: 4px;
     position: relative;
+    .btn-info{
+      z-index: 1;
+      position: absolute;
+      top: -5vh;
+      right: 0;
+      .btn-go{
+        cursor: pointer;
+        height:30vh;
+        width: 35vh;
+        display: block;
+        background: url(../images/btn-go.png) center center no-repeat;
+        text-indent: -9999px;
+        background-size: contain;
+        margin-left: 3vh;
+        transform: scale(1);
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        &:hover {
+          transform: scale(0.95);
+          -webkit-transform: scale(0.95);
+        }
+      }
+    }
     .t-date{
       min-height: 7.5vh;
       width: 100%;
@@ -159,6 +182,7 @@
       }
     }
     .nb-content{
+      position: relative;
       width: 100%;
       min-height: calc(52vh - 80px);
       padding: 15px;
@@ -168,6 +192,16 @@
       align-items: center;
       -webkit-justify-content: center;
       justify-content: center;
+      .nb-r{
+        display: inline-block;
+        font-size: 4vw;
+        font-weight: bold;
+        padding-bottom: 30px;
+        color: #333;
+        span{
+          color: #ff5722;
+        }
+      }
       div{
        text-align: center;
         p{
@@ -176,34 +210,6 @@
           font-weight: bold;
           color: #2ea79f;
           padding: 15px;
-        }
-      }
-      .btn-info{
-        width: 100%; 
-        padding-left:10% ;
-        .btn-go{
-          cursor: pointer;
-          height:30vh;
-          width: 35vh;
-          display: block;
-          background: url(../images/btn-go.png) center center no-repeat;
-          text-indent: -9999px;
-          background-size: contain;
-          margin-left: 3vh;
-          &:hover{
-
-          }
-        }
-        .input-nb{
-          height: 12vh;
-          width: 35vh;
-          display: block;
-          background: url(../images/btn-nb.png) center center no-repeat;
-          background-size: contain;
-          text-align: center;
-          color: #fff;
-          font-size: 6vh;
-          text-indent: 1vw;
         }
       }
     }
