--- a/iiot/taoyuang1000/collect/css/style.scss
+++ b/iiot/taoyuang1000/collect/css/style.scss
@@ -50,6 +50,12 @@
         display: inline-block;
         padding-bottom: 10px;
       }
+      &.t4 {
+        width: 90%;
+        max-width: 580px;
+        display: inline-block;
+        padding-bottom: 10px;
+      }
       &.img-mob{
         display: none;
       }
@@ -90,6 +96,61 @@
           }
         }
       }
+      li.w100{
+        width: 100%;
+        margin-bottom: 5px;
+        .nb{
+          padding: 15px;
+          p{
+            font-size: 20px;
+            line-height: 28px;
+            
+          }
+          .f-c-red{
+            color: #EC7714;
+          }
+          @media all and (max-width: 550px) {
+            padding: 10px;
+            p{
+              font-size: 15px;
+              line-height: 20px;
+            }
+          }
+        }
+        p.gift-title{
+          color: #fff;
+          font-size: 24px;
+          font-weight: bold;
+          text-shadow:2px 2px 5px rgba(214, 135, 137, 0.8);
+          @media all and (max-width: 550px) {
+            padding-top: 10px;
+            font-size: 18px;
+            text-align: center;
+          }
+        }
+      }
+    }
+    .gift-list{
+      li .nb {
+        min-height: 80px;
+          p{
+          line-height: 30px;
+          padding: 10px;
+          color: #5AAEA8;
+          font-size: 30px;
+          span{
+            font-size: 20px;
+            font-weight: normal;
+            display: block;
+            color: #333;
+          }
+        }
+      }
+      @media all and (max-width: 450px) {
+        li{
+          width: 50%;
+        }
+      }
     }
     .the-seal{
       width: 33%;
@@ -114,6 +175,40 @@
       width: 66%;
       float: left;
       position: relative;
+    }
+  }
+  .for-inside{
+    .line_border{
+      border-top: 1px #fff solid;
+      padding-bottom: 20px;
+    }
+    .new_nb{
+      width: 100%;
+      text-align: center;
+      padding: 5px 5px 15px;
+      img{
+        display: inline-block;
+        max-width: 50%;
+      }
+      p{
+        width: 60%;
+        border-radius: 10px;
+        background-color: #fff;
+        padding: 15px;
+        max-width: 400px;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 10px;
+        color: #5AAEA8;
+        font-size: 35px;
+        font-weight: bold;
+      }
+    }
+    .t-date{
+      width: 80%;
+    }
+    .gift-list{
+      padding: 5px 0 15px 0;
     }
   }
   .bg-grid{
@@ -199,7 +294,7 @@
         padding-bottom: 30px;
         color: #333;
         span{
-          color: #ff5722;
+          color: #EC7714;
         }
       }
       div{
@@ -261,6 +356,34 @@
               font-size: 18px;
             }
           }
+        }
+      }
+    }
+  }
+  .fixed-menu{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    z-index: 2;
+    background-color: #2ea79f;
+    padding: 10px;
+    text-align: center;
+    p{
+      width: 45%;
+      display: inline-block;
+      margin: 0 2%;
+      font-weight: bold;
+      text-align: center;
+      a{
+        border: 2px solid #fff;
+        color: #fff;
+        border-radius: 50px;
+        padding: 15px ;
+        display: block;
+        &:hover{
+          background-color: #fff;
+          color: #2ea79f;
         }
       }
     }
