--- a/quickclick/css/style.css
+++ b/quickclick/css/style.css
@@ -1003,6 +1003,10 @@ a.reminder:hover {
   background-size: contain;
 }
 
+.menu-product-info .set-card .fillin-info fieldset .create-text .shortcut-list {
+  padding-top: 5px;
+}
+
 .menu-product-info .set-card .fillin-info fieldset .shortcut-list {
   width: 100%;
 }
@@ -1021,8 +1025,8 @@ a.reminder:hover {
 .menu-product-info .set-card .fillin-info fieldset .shortcut-list .hashtag::after {
   position: absolute;
   content: "";
-  right: 2px;
-  top: 2px;
+  right: 3px;
+  top: 3px;
   width: 23px;
   height: 23px;
   float: left;
@@ -1043,6 +1047,28 @@ a.reminder:hover {
   background-color: #fffbf2;
 }
 
+.menu-product-info .set-card .fillin-info fieldset .shortcut-list .removetag {
+  background-color: #f0941d;
+  border-color: #f0941d;
+}
+
+.menu-product-info .set-card .fillin-info fieldset .shortcut-list .removetag::after {
+  background-image: url(../images/svg/circle-minus-w.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.menu-product-info .set-card .fillin-info fieldset .shortcut-list .removetag p {
+  color: #FFF;
+  font-weight: bold;
+}
+
+.menu-product-info .set-card .fillin-info fieldset .shortcut-list .removetag:hover {
+  background-color: #f0941d;
+  opacity: .9;
+}
+
 .menu-product-info .set-card .fillin-info fieldset .upload-cover {
   float: left;
   width: 100%;
@@ -1053,6 +1079,7 @@ a.reminder:hover {
   display: block;
   width: 150px;
   height: 150px;
+  overflow: hidden;
   border-radius: 0.625rem;
   border: 2px dashed #dbdbdb;
   display: -webkit-box;
@@ -1064,9 +1091,20 @@ a.reminder:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
+  text-align: center;
+}
+
+.menu-product-info .set-card .fillin-info fieldset .upload-cover a img {
+  left: 0;
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
 .menu-product-info .set-card .fillin-info fieldset .upload-cover a p {
+  z-index: 2;
   position: relative;
   color: #b1b5c4;
   padding: 45px 0 10px;
@@ -1086,6 +1124,27 @@ a.reminder:hover {
 .menu-product-info .set-card .fillin-info fieldset .upload-cover a:hover {
   opacity: 0.8;
   border-color: #bfbfbf;
+}
+
+.menu-product-info .set-card .fillin-info fieldset .upload-cover .preview p {
+  font-weight: bold;
+  color: #fff;
+}
+
+.menu-product-info .set-card .fillin-info fieldset .upload-cover .preview p::after {
+  background: url(../images/svg/upload-gray-w.svg);
+}
+
+.menu-product-info .set-card .fillin-info fieldset .upload-cover .preview::before {
+  content: "";
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: #00000045;
+  z-index: 1;
 }
 
 .menu-product-info .set-card .fillin-info fieldset .upload-cover input {
@@ -1846,7 +1905,7 @@ a.reminder:hover {
 
 .main-container .middle-content .menu-list .card .features-menu {
   display: none;
-  z-index: 2;
+  z-index: 3;
   position: absolute;
   width: 210px;
   top: 47px;
@@ -2536,6 +2595,7 @@ a.reminder:hover {
 }
 
 .main-container .middle-content .menu-content .field .product .product-photo {
+  position: relative;
   float: left;
   width: 40px;
   height: 40px;
@@ -2551,6 +2611,19 @@ a.reminder:hover {
 
 .main-container .middle-content .menu-content .field .product .product-photo:hover {
   opacity: 0.9;
+}
+
+.main-container .middle-content .menu-content .field .product .product-photo p.sales-status {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: #0000005c;
+  color: #fff;
+  text-align: center;
+  font-size: 11px;
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
 }
 
 .main-container .middle-content .menu-content .field .product input {
