--- a/quickclick/css/style.css
+++ b/quickclick/css/style.css
@@ -330,6 +330,116 @@ input.default::placeholder {
   }
 }
 
+.load-mfp-bg {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1044;
+  overflow: hidden;
+  position: fixed;
+  background: #ffffff;
+  opacity: 0.5;
+}
+
+.load-mfp-wrap {
+  position: fixed;
+  z-index: 1045;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.load-mfp-wrap .note {
+  padding: 15px 20px;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.load-mfp-wrap .note h4 {
+  text-align: center;
+  color: #f0941d;
+  font-weight: bold;
+}
+
+.load-mfp-wrap .load-wrap {
+  width: 120px;
+  height: 100px;
+  margin: 0 auto;
+  padding: 60px 20px 0px 20PX;
+  text-align: center;
+}
+
+.load-mfp-wrap .load-wrap .load .spinner {
+  -webkit-animation: loadingI 2s linear infinite;
+          animation: loadingI 2s linear infinite;
+}
+
+.load-mfp-wrap .load-wrap .load .bubble-1,
+.load-mfp-wrap .load-wrap .load .bubble-2 {
+  position: absolute;
+  top: 0;
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  background-color: #f0941d;
+  -webkit-animation: bounce 2s ease-in-out infinite;
+          animation: bounce 2s ease-in-out infinite;
+}
+
+.load-mfp-wrap .load-wrap .load .bubble-2 {
+  top: auto;
+  bottom: 0;
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
+}
+
+@-webkit-keyframes loadingI {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes loadingI {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 .switch-type {
   margin-top: 6px;
   position: relative;
