--- a/iiot/taoyuang1000/logistic/css/style.scss
+++ b/iiot/taoyuang1000/logistic/css/style.scss
@@ -1,13 +1,35 @@
 @import "../css/reset.scss";
 .main-container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(0deg, hsla(0, 0%, 100%, .9), hsla(0, 0%, 100%, .9)), #ef6079;
   background-position: 50%;
   background-attachment: fixed;
   background-size: cover;
+  .top-banner {
+    margin: 0 auto;
+    width:100%;
+    max-width: 600px;
+  }
+  .top-info{
+    padding:10px 10px;
+    background-color: #fff;
+    box-shadow: rgba(rgba(226, 176, 187, 0.38), 0.16) 0px 3px 6px;
+    p{
+      text-align: center;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 24px;
+      span{
+        color: #5cb8b2;
+      }
+      .c-red {
+        color: #ef6079;
+      }
+    }
+  }
   .middle-content {
-    padding: 40px 0;
+    padding:20px 0 40px 0;
     width: 90%;
     margin: 0 auto;
     max-width: 500px;
@@ -38,10 +60,10 @@
       .item-title{
         padding: 10px 0;
         text-align: center;
-        font-size: 16px;
+        font-size: 18px;
         font-weight: bold;
         display: block;
-        color: #333f48;
+        color: #333f48; 
         .c-red{
           color: #ef6079;
         }
@@ -58,13 +80,14 @@
         input, textarea{
           background-color: #fff;
           border-radius: 20px;
-          padding: 10px;
+          padding: 8px;
           width: 100%;
           text-align: center;
           font-size: 16px;
           line-height: 25px;
           color: #333f48;
           border: 1px solid #fff;
+          box-shadow: rgba(rgba(226, 176, 187, 0.38), 0.16) 0px 3px 6px;
           &.has-error{
             border-color: #ef6079;
           }
