紅利桃子 777 放大祭 - 新增按鈕banner

--- a/iiot/peach/css/style.css
+++ b/iiot/peach/css/style.css
@@ -1431,6 +1431,16 @@ a.gotop {
   text-align: center;
 }
 
+.inside-container .main-container .no-bg .both {
+  display: block;
+  text-align: center;
+}
+
+.inside-container .main-container .no-bg .both a {
+  width: 48.5%;
+  display: inline-block;
+}
+
 .inside-container .main-container .table-style .info ul.list {
   padding-bottom: 0;
 }
