--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -1039,6 +1039,14 @@ a.gotop {
         padding: 0;
         box-shadow: none;
         text-align: center;
+        .both{
+          display: block;
+          text-align: center;
+          a{
+            width: 48.5%;
+            display: inline-block;
+          }
+        }
       }
       .table-style{
         .info ul.list{ padding-bottom: 0;}
